fix footer overflow

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
             font-weight: normal;
         }
         .footer {
-            background-color: #26B481; color: #83DDD6;
+          background-color:#FCFAEB;
         }
         .easterbg {
             background-color: #F7F396;
